--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "minimist": "0.0.2",
     "knox": "0.8.6",
     "step": "0.0.5",
-    "underscore": "1.5.2"
+    "underscore": "1.5.2",
+    "mysql": "2.0.x"
   }
 }
