--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "knox": "0.8.6",
     "step": "0.0.5",
     "underscore": "1.5.2",
-    "mysql": "2.0.x"
+    "mysql": "2.0.x",
+    "basic-queue": "1.0.0"
   }
 }
